--- a/style.css
+++ b/style.css
@@ -16,11 +16,14 @@ body
 	line-height: 150%; 
 }
 
-.container h1
+.container h1 , h2 , h3
 {
 	font-family: "Georgia" ;
 	font-style: italic ;
 	color : #000 ;
+
+	padding-left: 10px ;
+	padding-right: 10px ;
 }
 
 .container small
@@ -28,9 +31,9 @@ body
 	font-size: 0.4em;
 }
 
-.greeting-texts
+.greeting-texts , .who-texts , .contact-texts
 {
 	font-style: italic ;
-	padding-left: 10px ;
-	padding-right: 10px ;
+	padding-left: 20px ;
+	padding-right: 20px ;
 }
