footer is changed. README.md will be removed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,8 +17,9 @@
         </div>
         {% endif %}
         {% include contact-link.html %}
-        <div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.title}}</a>.
-			Crafted & Designed by <a href="https://artemsheludko.github.io">Artem Sheludko</a>. Rearranged and Operated by <a href="{{site.url}}">{{site.author.name}}</a></div>
+		<div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.title}}</a>.<br />
+			Crafted & Designed by <a href="https://artemsheludko.github.io">Artem Sheludko</a>.<br />
+			Minimized, Rearranged and Operated by <a href="{{site.url}}/about/">{{site.author.name}}</a></div>
       </footer>
     </div>
   </div>
