--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -33,6 +33,7 @@
   font-family: $heading-font-family;
   font-size: 13px;
   text-align: center;
+  line-height: 150% ;
   color: var(--text-alt-color);
   a {
     border-bottom: 1px solid transparent;
