--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -255,7 +255,7 @@
     }
   }
 
-  .next {
+  .prev {
     text-align: right;
     margin-left: auto;
   }
@@ -268,7 +268,7 @@
       width: 100%;
     }
 
-    .next {
+    .prev {
       text-align: left;
     }
   }
