navigation - fix typo

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -84,14 +84,14 @@ layout: default
           
 		  {% if page.next.url %}
           <div class="next">
-            <a class="post__nav post__nav__next" href="{{page.next.url}}"><i class="ion ion-ios-arrow-back"></i> Next Page</a>
+            <a class="post__nav post__nav__next" href="{{page.next.url}}"><i class="ion ion-ios-arrow-back"></i> Next Post</a>
             <h4 class="post__nav__title"><a href="{{page.next.url}}">{{page.next.title}}</a></h4>
           </div>
           {% endif %}
 
 		  {% if page.previous.url %}
 			<div class="prev">
-              <a class="post__nav post__nav__prev" href="{{page.previous.url}}">Previous Page <i class="ion ion-ios-arrow-forward"></i></a>
+              <a class="post__nav post__nav__prev" href="{{page.previous.url}}">Previous Post <i class="ion ion-ios-arrow-forward"></i></a>
               <h4 class="post__nav__title"><a href="{{page.previous.url}}">{{page.previous.title}}</a></h4>
             </div>
           {% endif %}
