--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -114,6 +114,9 @@
   }
   a {
     border-bottom: 1px solid var(--link-color);
+    &:link, &:visited, &:active {
+      color: #c09 ;
+    }
     &:hover {
       border-color: transparent;
     }
