link color is changed --> transparent to blue tone

--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -115,7 +115,7 @@
   a {
     border-bottom: 1px solid var(--link-color);
     &:link, &:visited, &:active {
-      color: #c09 ;
+      color: #3377CC ;
     }
     &:hover {
       border-color: transparent;
