main.scss is changed ( failed )

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -4,7 +4,7 @@
 
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 :: Template name: Melotta
-:: Melotta is a modern and minimal Jekyll theme for sharing your ideas. It is focused on the content, speed, simplicity. With the help of the sass files, you can easily adjust the accent colors. Installing and customizing this theme is very easy.
+:: Melotta is a modern and minimal Jekyll theme for sharing your ideas. It is focimportd on the content, speed, simplicity. With the help of the sass files, you can easily adjust the accent colors. Installing and customizing this theme is very easy.
 :: Template Author: Artem Sheludko
 :: Version: 1.3
 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
